# python-pyside6-frameless

./: .gitignore  LINUX_WINDOW_TESTING.md  README.md  b.bat  pyproject.toml  run.py
app/: main.py  memory_snapshot.py  page_registry.py  runtime_logging.py  window_policy.py  windows_compat.py  windows_host.py
app/bridge/: __init__.py  app_bridge.py  card_glow_provider.py  dialog_service.py  memory_tools.py  performance_controller.py  secret_store.py  settings_store.py  task_store.py  theme_controller.py  tray_controller.py  util.py  window_controller.py
app/cpp/frameless_native/: CMakeLists.txt  README.md
app/cpp/frameless_native/src/: external_shadow_controller.cpp  external_shadow_controller.h  native_child_window_manager.cpp  native_child_window_manager.h  native_inline_drag_area.cpp  native_inline_drag_area.h  native_inline_input_router.cpp  native_inline_input_router.h  native_widget_host_agent.cpp  native_widget_host_agent.h  native_window_agent.cpp  native_window_agent.h
app/native/: __init__.py  fallback.py  runtime.py
frameless_pyside6_template_v30/: requirements.txt
frameless_pyside6_template_v30/app/: windows_host.py
frameless_pyside6_template_v30/qml/: NativeMainContent.qml
frameless_pyside6_template_v30/scripts/: run_linux.sh
qml/: MainWindow.qml  NativeAppMain.qml  NativeMainContent.qml
qml/controls/: AppButton.qml  AppCheckBox.qml  AppContextMenu.qml  AppDialog.qml  AppMenu.qml  AppSelect.qml  AppSlider.qml  AppTextField.qml  BackgroundRipple.qml  CardAccentGlow.qml  ColorPalettePopup.qml  ConfirmDialog.qml  ContextMenuItem.qml  DragScrollArea.qml  IconButton.qml  IconImage.qml  PanelShadow.qml  SoftShadow.qml  StorageBinding.qml  Toast.qml  TrayMenuWindow.qml
qml/core/: AppInfo.qml  InlineWindowBus.qml  Theme.qml  qmldir
qml/layout/: InlineWindowManager.qml  MainWindowContent.qml  PageHost.qml  ResizableSideNav.qml  SideNavButton.qml  SplitHandle.qml
qml/pages/: AboutPage.qml  HomePage.qml  InlineDemoPage.qml  SettingsPage.qml  TaskCreatePage.qml  TaskEditPage.qml  ToolsPage.qml  UpdatePage.qml
qml/window/: AppWindow.qml  ChildWindow.qml  FramelessWindow.qml  InlineChildWindow.qml  NativeChildWindow.qml  NativeInlineInputRouterItem.qml  NativeInlineMoveArea.qml  ResizeArea.qml  RippleCircle.qml  ShadowWindow.qml  TitleBar.qml  (+1 more)
scripts/: README.md  build_linux.sh  build_windows.bat  check_native_window_integrity.py  check_text_encoding.py  memory_baseline_probe.py  memory_child_probe.py  memory_child_reuse_probe.py  memory_interaction_probe.py  memory_multi_child_probe.py  memory_page_probe.py  package_app.py  reset_task_demo_data.py  run_windows.bat  smoke_window_exit.py  task_list_probe.py  task_long_text_probe.py  visual_window_probe.py
(+51 files in other folders)
